Remove usage of collections empty set