@@ -38,11 +38,11 @@ public interface IModule extends Comparable<IModule> {
 	}
 
 	default Set<MaterialType> getMaterialTypes() {
-		return Collections.emptySet();
+		return Set.of();
 	}
 
 	default Set<String> getDefaultMaterialBlacklist() {
-		return Collections.emptyNavigableSet();
+		return Set.of();
 	}
 
 	default void defineModuleConfig(IModuleData moduleData, IDynamicSpecConfig config) {}
